--- a/webpack.html
+++ b/webpack.html
@@ -1,4 +1,4 @@
 <%= htmlWebpackPlugin.files.css.map((css) => `<link
-  href="/assets${css}"
+  href="{{ '/assets${css}' | url }}"
   rel="stylesheet"
 />`).join('') %>
